Client Drag & Drop test

--- a/WebClient/composer.json
+++ b/WebClient/composer.json
@@ -18,9 +18,11 @@
         "ext-mcrypt": "Required for HTTP cookie encryption"
     },
     "autoload": {
-        "psr-0": {"Slim": "."},
+        "files": ["class/config.php"],
+        "psr-0": {
+            "Slim": "."
+        },
         "classmap": [
-            "models"
         ]
     }
 }
